WebCore/rendering/style/CursorList.h
@@ -39,6 +39,7 @@ public:
     }
 
     const CursorData& operator[](int i) const { return m_vector[i]; }
+    CursorData& operator[](int i) { return m_vector[i]; }
 
     bool operator==(const CursorList& o) const { return m_vector == o.m_vector; }
     bool operator!=(const CursorList& o) const { return m_vector != o.m_vector; }
